force-app/main/default/objects/KeyContacts__c/KeyContacts__c.object-meta.xml
<CustomObject>
    <description>[Business] This object is used to store Key Contacts on both Grantor and Grantee side.</description>
    <label>Key Contact</label>
    <nameField>
        <label>Key Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>