force-app/main/default/objects/KeyContacts__c/fields/AmendmentRequest__c.field-meta.xml
<CustomField>
    <fullName>AmendmentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amendment Request</label>
    <referenceTo>AmendmentRequest__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>KeyContacts</relationshipName>
    <type>Lookup</type>
</CustomField>