force-app/main/default/objects/KeyContacts__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Announcement</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>