force-app/main/default/objects/KeyContacts__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award</label>
    <referenceTo>Award__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>