force-app/main/default/objects/KeyContacts__c/fields/BudgetPeriod__c.field-meta.xml
<CustomField>
    <fullName>BudgetPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To relate Senior/key person records</description>
    <label>Budget Period</label>
    <referenceTo>BudgetPeriod__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>