force-app/main/default/objects/KeyContacts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>