force-app/main/default/objects/KeyContacts__c/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <formula>IF(
  Contact__r.Account.RecordType.Name = &apos;Internal&apos;,
  &apos;State&apos;,
  &apos;Grantor&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactType</label>
    <type>Text</type>
</CustomField>