force-app/main/default/objects/KeyContacts__c/fields/CurrentContact__c.field-meta.xml
<CustomField>
    <fullName>CurrentContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Key Contacts (Current Contact)</relationshipLabel>
    <relationshipName>Key_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>