force-app/main/default/objects/KeyContacts__c/fields/CurrentContactEmailFormula__c.field-meta.xml
<CustomField>
    <fullName>CurrentContactEmailFormula__c</fullName>
    <description>Current contact related changes as per demo suggestion.</description>
    <formula>IF(CurrentContact__c = null , &apos;NA&apos; ,CurrentContact__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contact Email Formula</label>
    <type>Text</type>
</CustomField>