force-app/main/default/objects/KeyContacts__c/fields/CurrentContactFormula__c.field-meta.xml
<CustomField>
    <fullName>CurrentContactFormula__c</fullName>
    <description>Current contact related changes as per demo suggestion.</description>
    <formula>IF( CurrentContact__c  = null ,&apos;NA&apos; ,  CurrentContact__r.FirstName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contact Formula</label>
    <type>Text</type>
</CustomField>