force-app/main/default/objects/KeyContacts__c/fields/FirstNameAndLastName__c.field-meta.xml
<CustomField>
    <fullName>FirstNameAndLastName__c</fullName>
    <label>First Name and Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>