force-app/main/default/objects/KeyContacts__c/fields/FringeBenefits__c.field-meta.xml
<CustomField>
    <fullName>FringeBenefits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This form field used in RESEARCH &amp; RELATED BUDGET V1.4</description>
    <label>Fringe Benefits ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>