force-app/main/default/objects/KeyContacts__c/fields/FundsRequested__c.field-meta.xml
<CustomField>
    <fullName>FundsRequested__c</fullName>
    <formula>( RequestedSalary__c  +  FringeBenefits__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Requested ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>