force-app/main/default/objects/KeyContacts__c/fields/HideEditDelete__c.field-meta.xml
<CustomField>
    <fullName>HideEditDelete__c</fullName>
    <formula>IF(
  NOT(ISBLANK(SiteVisit__c)),
  SiteVisit__r.HideRolesNewEditDelete__c,
  IF(
    NOT(ISBLANK(AmendmentRequest__c)),
    AmendmentRequest__r.HideExternalEdit__c,
    IF(
      NOT(ISBLANK(Award__c)),
      OR(
        NOT(Award__r.HasEditAccess__c),
        IF(
          IsKeyContact__c,
          OR(
            Award__r.HideGrantorEdit__c,
            Award__r.AmendmentNumber__c != 1
          ),
          false
        )
      ),
      true
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Edit Delete</label>
    <type>Checkbox</type>
</CustomField>