force-app/main/default/objects/KeyContacts__c/fields/HideEditDeleteBtn__c.field-meta.xml
<CustomField>
    <fullName>HideEditDeleteBtn__c</fullName>
    <formula>OR(NOT(ISPICKVAL(SiteVisit__r.Status__c,&apos;Created&apos;)),NOT(ISPICKVAL(Announcement__r.Status__c,&apos;Created&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Edit Delete Btn</label>
    <type>Checkbox</type>
</CustomField>