force-app/main/default/objects/KeyContacts__c/fields/InternalUniqueID__c.field-meta.xml
<CustomField>
    <fullName>InternalUniqueID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context</description>
    <externalId>true</externalId>
    <label>Internal Unique ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>