force-app/main/default/objects/KeyContacts__c/fields/IsKeyContact__c.field-meta.xml
<CustomField>
    <fullName>IsKeyContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for GOVSBIR</description>
    <label>Is Key Personnel</label>
    <type>Checkbox</type>
</CustomField>