force-app/main/default/objects/KeyContacts__c/fields/IsSiteVisitSubmittedOrClosed__c.field-meta.xml
<CustomField>
    <fullName>IsSiteVisitSubmittedOrClosed__c</fullName>
    <formula>SiteVisit__r.IsSiteVisitSubmittedOrClosed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Site Visit Submitted Or Closed</label>
    <type>Checkbox</type>
</CustomField>