force-app/main/default/objects/KeyContacts__c/fields/IsUser__c.field-meta.xml
<CustomField>
    <fullName>IsUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUser</label>
    <type>Checkbox</type>
</CustomField>