force-app/main/default/objects/KeyContacts__c/fields/KeyPOC__c.field-meta.xml
<CustomField>
    <fullName>KeyPOC__c</fullName>
    <formula>Contact__r.KeyPOC__c =True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key POC</label>
    <type>Checkbox</type>
</CustomField>