force-app/main/default/objects/KeyContacts__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <formula>Contact__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>