force-app/main/default/objects/KeyContacts__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>