force-app/main/default/objects/KeyContacts__c/fields/OtherProjectRole__c.field-meta.xml
<CustomField>
    <fullName>OtherProjectRole__c</fullName>
    <label>Other Project Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>