force-app/main/default/objects/KeyContacts__c/fields/PreApplication__c.field-meta.xml
<CustomField>
    <fullName>PreApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Application</label>
    <referenceTo>PreApplication__c</referenceTo>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>