force-app/main/default/objects/KeyContacts__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Key Contacts</relationshipLabel>
    <relationshipName>ProgramKeyContacts</relationshipName>
    <type>Lookup</type>
</CustomField>