force-app/main/default/objects/KeyContacts__c/fields/ProgressReport__c.field-meta.xml
<CustomField>
    <fullName>ProgressReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Report</label>
    <referenceTo>ProgressReports__c</referenceTo>
    <relationshipLabel>Key Contacts</relationshipLabel>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>