force-app/main/default/objects/KeyContacts__c/fields/RequestedSalary__c.field-meta.xml
<CustomField>
    <fullName>RequestedSalary__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This form field used in RESEARCH &amp; RELATED BUDGET V1.4</description>
    <label>Requested Salary ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>