force-app/main/default/objects/KeyContacts__c/fields/SiteVisit__c.field-meta.xml
<CustomField>
    <fullName>SiteVisit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>SiteVisit__c</referenceTo>
    <relationshipName>Key_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>