force-app/main/default/objects/KeyContacts__c/fields/TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNumber__c</fullName>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>