force-app/main/default/objects/KeyContacts__c/fields/TermCondition__c.field-meta.xml
<CustomField>
    <fullName>TermCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit Requirement</label>
    <referenceTo>TermCondition__c</referenceTo>
    <relationshipName>KeyContacts</relationshipName>
    <type>Lookup</type>
</CustomField>