force-app/main/default/objects/KeyContacts__c/fields/TypeOfPhase__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPhase__c</fullName>
    <description>This field indicates to which phase the key contact belongs to</description>
    <label>Type Of Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funding Opportunity</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>PreApplication</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>ProgressReport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>