force-app/main/default/objects/KeyContacts__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>