force-app/main/default/objects/KeyContacts__c/recordTypes/Grantee.recordType-meta.xml
<RecordType>
    <fullName>Grantee</fullName>
    <active>true</active>
    <description>This will be used for Grantee Key Contacts</description>
    <label>Grantee</label>
</RecordType>