force-app/main/default/objects/KeyContacts__c/recordTypes/Grantor.recordType-meta.xml
<RecordType>
    <fullName>Grantor</fullName>
    <active>true</active>
    <description>This will be used for Grantor Key Contacts</description>
    <label>Grantor</label>
</RecordType>