force-app/main/default/objects/KeyContacts__c/recordTypes/OtherPersonnel.recordType-meta.xml
<RecordType>
    <fullName>OtherPersonnel</fullName>
    <active>true</active>
    <description>This field used in RESEARCH &amp; RELATED BUDGET V1.4 form</description>
    <label>Other Personnel</label>
</RecordType>