force-app/main/default/objects/KeyContacts__c/recordTypes/SeniorKeyPerson.recordType-meta.xml
<RecordType>
    <fullName>SeniorKeyPerson</fullName>
    <active>true</active>
    <description>This record type used in RR Budget 10Y form</description>
    <label>Senior/Key Person</label>
</RecordType>